tests/snapshots/cli_shield__shield_zone_list_json.snap
---
source: tests/cli_shield.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "Items": [
    {
      "shieldZoneId": 55001,
      "pullZoneId": 100001,
      "learningMode": false,
      "learningModeUntil": null,
      "wafEnabled": true,
      "wafExecutionMode": 1,
      "wafDisabledRules": null,
      "wafLogOnlyRules": null,
      "wafRequestHeaderLoggingEnabled": null,
      "wafRequestIgnoredHeaders": null,
      "wafRealtimeThreatIntelligenceEnabled": null,
      "wafProfileId": null,
      "wafRequestBodyLimitAction": null,
      "wafResponseBodyLimitAction": null,
      "rateLimitRulesLimit": 20,
      "customWafRulesLimit": 50,
      "planType": 1,
      "dDoSShieldSensitivity": 2,
      "dDoSExecutionMode": 1,
      "dDoSChallengeWindow": null,
      "blockVpn": null,
      "blockTor": null,
      "blockDatacentre": null,
      "whitelabelResponsePages": null
    },
    {
      "shieldZoneId": 55002,
      "pullZoneId": 100002,
      "learningMode": true,
      "learningModeUntil": null,
      "wafEnabled": false,
      "wafExecutionMode": null,
      "wafDisabledRules": null,
      "wafLogOnlyRules": null,
      "wafRequestHeaderLoggingEnabled": null,
      "wafRequestIgnoredHeaders": null,
      "wafRealtimeThreatIntelligenceEnabled": null,
      "wafProfileId": null,
      "wafRequestBodyLimitAction": null,
      "wafResponseBodyLimitAction": null,
      "rateLimitRulesLimit": 5,
      "customWafRulesLimit": 10,
      "planType": 0,
      "dDoSShieldSensitivity": null,
      "dDoSExecutionMode": null,
      "dDoSChallengeWindow": null,
      "blockVpn": null,
      "blockTor": null,
      "blockDatacentre": null,
      "whitelabelResponsePages": null
    }
  ],
  "CurrentPage": 1,
  "TotalItems": 2,
  "HasMoreItems": false
}
